<resources>
    <string name="app_name">Inventory</string>
    <!--inventory case-->
    <string name="null_data_count">no item was added yet</string>
    <string name="one_data_count">item</string>
    <string name="data_count">items</string>

    <!--buttons-->
    <string name="sale">SALE</string>
    <string name="delete">DELETE</string>
    <string name="order">ORDER MORE</string>
    <string name="add_photo">Add A Photo</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="available">available</string>
    <string name="description">Description</string>
</resources>
