<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".DataContainerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
           >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/high_margin"
                >
                <ImageView

                    android:id="@+id/thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/double_image_height"
                    android:scaleType="centerCrop"
                    android:src="@color/colorPrimaryDarker"
                    android:backgroundTint="@color/white"

                    />

                <TextView
                    android:id="@+id/add_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/ic_photo_camera_white"
                    android:drawablePadding="@dimen/low_margin"
                android:text="@string/add_photo" />
            <ImageView
                android:layout_width="@dimen/camera_bg_width"
                android:layout_height="@dimen/camera_bg_height"
                android:padding="2dp"
                android:layout_gravity="right|bottom"
                android:layout_margin="@dimen/high_margin"
                android:background="@drawable/edit_style"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_photo_camera"
                />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/high_margin">

                <EditText
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/low_margin"
                    android:background="@drawable/edit_style"
                    android:hint="@string/item_name"
                    android:padding="@dimen/low_margin"
                    android:textSize="@dimen/common_font_size" />

                <EditText
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/low_margin"
                    android:background="@drawable/edit_style"
                    android:hint="@string/price"
                    android:padding="@dimen/low_margin"
                    android:textSize="@dimen/common_font_size"
                    android:inputType="numberDecimal"/>

                <EditText
                    android:id="@+id/quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/low_margin"
                    android:background="@drawable/edit_style"
                    android:hint="@string/quantity"
                    android:padding="@dimen/low_margin"
                    android:textSize="@dimen/common_font_size"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="@dimen/low_margin"
                    android:background="@drawable/edit_style"
                    android:gravity="top"
                    android:hint="@string/description"
                    android:padding="@dimen/low_margin"
                    android:textSize="@dimen/common_font_size" />

                <Button
                    android:id="@+id/done"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_bg_style"
                    android:text="Done"
                    android:textColor="@color/white"
                    android:textSize="@dimen/common_font_size"
                    android:layout_marginTop="@dimen/high_margin"
                  />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>